Item behind message container clickable, fix styling for empty cart in checkout

--- a/static/assets/Yves/styleguide/assets/scss/components/atoms/message/_message.scss
+++ b/static/assets/Yves/styleguide/assets/scss/components/atoms/message/_message.scss
@@ -18,6 +18,8 @@
     top: 50px;
     left: 0;
     text-align: center;
+
+    pointer-events: none;
 }
 
 .message{
